<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/background1">

    <!-- Glass Morphism Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:backgroundTint="#50FFFFFF"> <!-- Semi-transparent tint -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Sign Up Title -->
            <TextView
                android:id="@+id/signUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp" />

            <!-- Name Input -->
            <EditText
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#80FFFFFF" />

            <!-- Email Input -->
            <EditText
                android:autofillHints="emailAddress"
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#80FFFFFF" />

            <!-- Phone Input -->
            <EditText
                android:autofillHints="tel"
                android:id="@+id/phoneField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#80FFFFFF" />

            <!-- Password Input -->
            <EditText
                android:autofillHints="password"
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:padding="15dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#80FFFFFF" />

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/btn_background"
                android:backgroundTint="#EEFF922A"
                android:padding="13dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
