<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/background1">

    <!-- Glass Morphism Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#50FFFFFF"> <!-- Semi-transparent white background -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Sign In Title -->
            <TextView
                android:id="@+id/signInTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/emailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:padding="15dp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#80FFFFFF" /> <!-- Semi-transparent background -->

            <!-- Password Input -->
            <EditText
                android:id="@+id/passwordSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:padding="15dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#80FFFFFF" /> <!-- Semi-transparent background -->

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/btn_background"
                android:backgroundTint="#EEFF922A"
                android:padding="13dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>